Try the tango theme instead.

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \documentclass{book}
 \usepackage{iwona,palatino}
-\usepackage{pastie}
+\usepackage{style}
 %\usepackage{palatino}
 \usepackage[
     pdftitle={Learn C The Hard Way: A Clear \& Direct Guide To Modern C Programming},
