Unclear pronoun ref in ex11.

--- a/ex11.tex
+++ b/ex11.tex
@@ -46,7 +46,7 @@ so you can see another way it runs.
 \section{How To Break It}
 
 In your own code you should favor \ident{for-loop} constructs over
-\ident{while-loop} because they're easier to break.  Here's a few
+\ident{while-loop} because a \ident{for-loop} is harder to break.  Here's a few
 common ways:
 
 \begin{enumerate}
