Need to introduce external research and make them learn printf more ex3.

--- a/ex3.tex
+++ b/ex3.tex
@@ -45,6 +45,31 @@ Pretty soon I'm going to stop telling you to run \file{make} and what
 the build looks like, so please make sure you're getting this right
 and that it's working.
 
+\section{External Research}
+
+In the \emph{Extra Credit} section of each exercise I may have you go
+find information on your own and figure things out.  This is an important
+part of being a self-sufficient programmer.  If you constantly run to
+ask someone a question before trying to figure it out first then you
+never learn to solve problems independently.  This leads to you never
+building confidence in your skills and always needing someone else
+around to do your work.
+
+The way you break this habit is to \emph{force} yourself to try to answer
+your own questions first, and to confirm that your answer is right.  You
+do this by trying to break things, experimenting with your possible answer,
+and doing your own research.
+
+For this exercise I want you to go online and find out \emph{all} of the
+\ident{printf} escape codes and format sequences.  Escape codes are 
+\verb|\n| or \verb|\t| that let you print a newline or tab (respectively).
+Format sequences are the \verb|%s| or \verb|%d| that let you print a 
+string or a integer.  Find all of the ones available, how you can
+modify them, and what kind of "precisions" and widths you can do.
+
+From now on, these kinds of tasks will be in the Extra Credit and you
+should do them.
+
 \section{How To Break It}
 
 Try a few of these ways to break this program, which may or may
@@ -77,4 +102,5 @@ not cause it to crash on your computer:
 \item Add \file{ex3} to your \file{Makefile}'s \ident{all} list.  Use this
     to \verb|make clean all| and build all your exercises so far.
 \end{enumerate}
+
 
