Laid out the structure of a big part of the book.

--- a/ex14.tex
+++ b/ex14.tex
@@ -1,7 +1,20 @@
-\chapter{Exercise 14}
+\chapter{Exercise 14: Writing And Using Functions}
 
+Until now you've just used functions that are part of the
+\file{stdio.h} header file.  In this exercise you will write
+some functions and use some other functions.
+
+\begin{code}{ex14.c}
+<< d['code/ex14.c|pyg|l'] >>
+\end{code}
 
 \section{What You Should See}
+
+\begin{code}{ex14 output}
+\begin{lstlisting}
+<< d['code/ex14.out|dexy'] >>
+\end{lstlisting}
+\end{code}
 
 
 \section{How To Break It}
