--- a/ex15.tex
+++ b/ex15.tex
@@ -1,8 +1,22 @@
-\chapter{Exercise 15}
+\chapter{Exercise 15: Pointers Dreaded Pointers}
 
+Pointers are famous mystical creatures in C that I will attempt to
+demystify by teaching you the vocabulary used to deal with them.  They
+actually aren't that complex, it's just they are frequently abused
+in weird ways that make them hard to use.  If you avoid the stupid
+ways to use pointers then they're fairly easy.
+
+\begin{code}{ex15.c}
+<< d['code/ex15.c|pyg|l'] >>
+\end{code}
 
 \section{What You Should See}
 
+\begin{code}{ex15 output}
+\begin{lstlisting}
+<< d['code/ex15.out|dexy'] >>
+\end{lstlisting}
+\end{code}
 
 \section{How To Break It}
 
