--- a/ex16.tex
+++ b/ex16.tex
@@ -1,8 +1,27 @@
-\chapter{Exercise 16}
+\chapter{Exercise 16: Structs And Pointers To Them}
 
+While it's useful to have all the various data types C has,
+it's more useful to package them into a cohesive container.
+A \ident{struct} is how C creates cohesive records, and the
+closest construct you might know is classes and objects.  However,
+\ident{structs} predate Object Oriented Programming so they're
+not quite the same.
+
+In this exercise you'll learn how to make a \ident{struct},
+create an array of them, point a pointer at them, and use them
+to make sense of internal memory structures.
+
+\begin{code}{ex16.c}
+<< d['code/ex16.c|pyg|l'] >>
+\end{code}
 
 \section{What You Should See}
 
+\begin{code}{ex16 output}
+\begin{lstlisting}
+<< d['code/ex16.out|dexy'] >>
+\end{lstlisting}
+\end{code}
 
 \section{How To Break It}
 
