--- a/ex17.tex
+++ b/ex17.tex
@@ -1,8 +1,21 @@
-\chapter{Exercise 17}
+\chapter{Exercise 17: Heap And Stack Memory Allocation}
 
+You know about many of the data types that C supports, but
+now you need to know how they're stored in memory and how to
+get access to greater amounts of memory with \ident{malloc}
+and friends.
+
+\begin{code}{ex17.c}
+<< d['code/ex17.c|pyg|l'] >>
+\end{code}
 
 \section{What You Should See}
 
+\begin{code}{ex17 output}
+\begin{lstlisting}
+<< d['code/ex17.out|dexy'] >>
+\end{lstlisting}
+\end{code}
 
 \section{How To Break It}
 
