--- a/ex19.tex
+++ b/ex19.tex
@@ -1,4 +1,24 @@
-\chapter{Exercise 19}
+\chapter{Exercise 19: A Simple Object System}
+
+I learned C before I learned Object Oriented Programming, so 
+it helped me to build an OOP system in C to understand the
+basics of what OOP meant.  You are probably the kind of person
+who learned an OOP language before you learned C, so this kind
+of bridge might help you as well.  In this exercise, we will
+build a simple object system.
+
+
+\begin{code}{ex19.c}
+<< d['code/ex19.c|pyg|l'] >>
+\end{code}
+
+\section{What You Should See}
+
+\begin{code}{ex19 output}
+\begin{lstlisting}
+<< d['code/ex19.out|dexy'] >>
+\end{lstlisting}
+\end{code}
 
 
 \section{What You Should See}
