Small typo correction in ex13

--- a/ex13.tex
+++ b/ex13.tex
@@ -16,9 +16,9 @@ code that we'll break down to understand this concept of "jump tables":
 << d['code/ex13.c|pyg|l'] >>
 \end{code}
 
-In this program we're taking take a single command line argument and
-printing out all of the vowels in an incredibly tedious way to demonstrate
-a \ident{switch-statement}.  Here's how this \ident{switch-statement}
+In this program we take a single command line argument and print out all
+of the vowels in an incredibly tedious way to demonstrate
+a \ident{switch-statement}.  Here's how the \ident{switch-statement}
 works:
 
 \begin{enumerate}
