--- a/ex2.tex
+++ b/ex2.tex
@@ -115,7 +115,7 @@ use our special settings.
 
 \section{How To Break It}
 
-That should be enough to get you started, but first lets break this 
+That should be enough to get you started, but first let's break this 
 make file in a particular way so you can see what happens.  Take
 the line \verb|rm -f ex1| and dedent it (move it all the way left)
 so you can see what happens.  Rerun \verb|make clean| and you should
