Fix typos in ex1: "a a file name" -> "a file named", "man" -> "many".

--- a/ex1.tex
+++ b/ex1.tex
@@ -15,8 +15,8 @@ cc     ex1.c   -o ex1
 \end{lstlisting}
 \end{Terminal}
 
-Your computer may use a slightly different command, but the end result should be a
-a file name \file{ex1} that you can run.
+Your computer may use a slightly different command, but the end result should be
+a file named \file{ex1} that you can run.
 
 \section{What You Should See}
 
@@ -68,7 +68,7 @@ Now do the make again like you just did and you'll see the warning go away.
 \begin{enumerate}
 \item Open the ex1 file in your text editor and change or delete random parts.  Try running it and see what happens.
 \item Print out 5 more lines of text or something more complex than hello world.
-\item Run \verb|man 3 puts| and read about this function and man others.
+\item Run \verb|man 3 puts| and read about this function and many others.
 \end{enumerate}
 
 
