Highlight executable file ex1.

--- a/ex1.tex
+++ b/ex1.tex
@@ -66,7 +66,7 @@ Now do the make again like you just did and you'll see the warning go away.
 \section{Extra Credit}
 
 \begin{enumerate}
-\item Open the ex1 file in your text editor and change or delete random parts.  Try running it and see what happens.
+\item Open the \file{ex1} file in your text editor and change or delete random parts.  Try running it and see what happens.
 \item Print out 5 more lines of text or something more complex than hello world.
 \item Run \verb|man 3 puts| and read about this function and many others.
 \end{enumerate}
