Highlight file ex1.c.

--- a/ex2.tex
+++ b/ex2.tex
@@ -103,7 +103,7 @@ put as many commands as you wanted in there, so it's a great
 automation tool.
 
 \begin{aside}{Did You Fix ex1.c?}
-If you fixed ex1.c to have \verb|#include <stdio.h>| then your
+If you fixed \file{ex1.c} to have \verb|#include <stdio.h>| then your
 output will not have the error about puts.  I have the error
 here because I didn't fix it.
 \end{aside}
