--- a/ex2.tex
+++ b/ex2.tex
@@ -138,6 +138,7 @@ some make variants are very picky.
 \item Create an \verb|all: ex1| target that will build \file{ex1} with
     just the command \verb|make|.
 \item Read \verb|man make| to find out more information on how to run it.
+\item Read \verb|man cc| to find out more information on what the flags \verb|-Wall| and \verb|-g| do.
 \item Research Makefiles online and see if you can improve this one even more.
 \item Find a \file{Makefile} in another C project and try to understand
     what it's doing.
