More of the structure planned out.

--- a/ex16.tex
+++ b/ex16.tex
@@ -11,6 +11,8 @@ In this exercise you'll learn how to make a \ident{struct},
 create an array of them, point a pointer at them, and use them
 to make sense of internal memory structures.
 
+% need to cover: making a struct, an array of them, pointers to them, self-referentials, typedefs
+
 \begin{code}{ex16.c}
 << d['code/ex16.c|pyg|l'] >>
 \end{code}
@@ -27,6 +29,4 @@ to make sense of internal memory structures.
 
 
 \section{Extra Credit}
-
-
 
