--- a/ex20.tex
+++ b/ex20.tex
@@ -1,13 +1,30 @@
-\chapter{Exercise 20}
+\chapter{Exercise 20: Advanced Data Types }
+
+You've been exposed to different ways to structure data and how C perceives 
+that data in your computer's memory, so now we'll cover all the remaining
+specific information about types and the data they can hold.  This exercise
+is more of a reference that explains different things C does, with code examples
+for each.  You'll then be tasked with making flash cards and memorizing them
+so you know them cold.
+
+\section{Available Data Types}
 
 
-\section{What You Should See}
+\section{Type Conversion}
 
 
-\section{How To Break It}
+\section{Math Operations}
+
+
+\section{Boolean Operations}
 
 
 \section{Extra Credit}
 
 
+\begin{enumerate}
+\item Take the tables of information presented in this chapter, and write up
+    flash cards for each row.  Use these flash cards to spend 15 minutes a
+    day (or more) memorizing everything you can.
+\end{enumerate}
 
