--- a/ex21.tex
+++ b/ex21.tex
@@ -1,4 +1,14 @@
-\chapter{Exercise 21}
+\chapter{Exercise 21: Scope And The Stack}
+
+The concept of "scope" seems to confuse quite a few people when they first
+start programming.  Originally it came from the use of the system stack
+(which we lightly covered earlier) and how it was used to store temporary
+variables.  In this exercise, we'll learn about scope by learning about
+how a stack data structure works, and then feeding that concept back in
+to how modern C does scoping.
+
+We'll also learn the kinds of things to avoid when dealing with the
+scoping rules that C has.
 
 
 \section{What You Should See}
