--- a/ex22.tex
+++ b/ex22.tex
@@ -1,13 +1,21 @@
-\chapter{Exercise 22}
+\chapter{Exercise 22: Advanced Flow Control}
 
+You know how the stack works, and how scoping works in your C programs.  With
+that concept in place, you can now learn about all the kinds of "flow control"
+C supports.  "Flow control" just means controlling how the execution of the
+program "flows" with \ident{if-statements}, \ident{for-loops}, etc.  In this
+exercise you'll get information and you'll be expected to spend time memorizing
+it so it's solid in your mind.
 
-\section{What You Should See}
+\section{Do-While}
 
+\section{Break And Continue}
 
-\section{How To Break It}
-
+\section{Goto and Labels}
 
 \section{Extra Credit}
 
-
-
+\begin{enumerate}
+\item Get this information solid as well by making flash cards and spending 15 
+    minutes a day memorizing it.
+\end{enumerate}
