--- a/ex23.tex
+++ b/ex23.tex
@@ -1,5 +1,18 @@
-\chapter{Exercise 23}
+\chapter{Exercise 23: Meet Duff's Device}
 
+This exercise is a brain teaser where I introduce you to one of the
+most famous hacks in C called "Duff's Device", named after Tom Duff
+the "inventor".  This little slice of awesome (evil?) has nearly everything
+you've been learning wrapped in one tiny little package.  Figuring out
+how it works is also a good fun puzzle.
+
+\begin{aside}{If You Use This You Shall Be Ridiculed}
+Part of the fun of C is that you can come up with crazy hacks like this,
+but this is also what makes C annoying to use.  It's good to learn about
+these tricks because it gives you a deeper understanding of
+the language and your computer.  But, you should never use this.  Always
+strive for easy to read straight forward code.
+\end{aside}
 
 \section{What You Should See}
 
@@ -9,5 +22,8 @@
 
 \section{Extra Credit}
 
-
+\begin{enumerate}
+\item Rewrite this using \ident{goto}, and then never speak of this again
+    or else.
+\end{enumerate}
 
