--- a/ex24.tex
+++ b/ex24.tex
@@ -1,4 +1,9 @@
-\chapter{Exercise 24}
+\chapter{Exercise 24: Input And Output}
+
+You've been using \ident{printf} to print things, and that's great
+and all, but you need more.  In this exercise you'll learn about 
+getting input from the terminal and then we'll cover files in the
+next exercise.
 
 
 \section{What You Should See}
