--- a/ex25.tex
+++ b/ex25.tex
@@ -1,5 +1,8 @@
-\chapter{Exercise 25}
+\chapter{Exercise 25: Working With Files}
 
+The great thing about C's I/O functions is that they're nearly the same
+whether you're working with the terminal or a file.  This exercise will
+teach you the basics of working with files.
 
 \section{What You Should See}
 
