--- a/ex26.tex
+++ b/ex26.tex
@@ -1,4 +1,10 @@
-\chapter{Exercise 26}
+\chapter{Exercise 26: The C Pre-Processor}
+
+The final exercise in part 1 is an introduction to the "cpp" or C Pre-Processor.
+It's usually spelled "c preprocessor" now, but without the hyphen you wouldn't
+understand why it's call "cpp".  You'll learn what cpp does, and why it's 
+typically used wrong.  We'll then cover some handy macros you'll end up
+needing in part 2.
 
 
 \section{What You Should See}
