--- a/ex27.tex
+++ b/ex27.tex
@@ -1,4 +1,13 @@
-\chapter{Exercise 27}
+\chapter{Exercise 27: Defensive Programming}
+
+Welcome to part 2 of the book, where we take your freshly minted basic skills and
+apply them to a real project.  We first need to cover some concepts you'll need
+to use while you work on the project.  First up is the idea of "defensive programming"
+and how to write rock solid C code (or at least as close as you can get to it).
+
+In this exercise we'll expand on the macros you learned in Exercise 26 and 
+use them religiously during the rest of the book.  You'll also learn a set of
+rules you need to follow while you code and review your code.
 
 
 \section{What You Should See}
