--- a/ex28.tex
+++ b/ex28.tex
@@ -1,5 +1,10 @@
-\chapter{Exercise 28}
+\chapter{Exercise 28: Intermediate Makefiles}
 
+In this chapter you'll learn more about \file{make} by creating
+a skeleton project directory to use in building your C programs
+later.  This skeleton directory will be used in the next few
+exercises so you understand more details about how a real 
+C program is structured.
 
 \section{What You Should See}
 
