--- a/ex29.tex
+++ b/ex29.tex
@@ -1,5 +1,11 @@
-\chapter{Exercise 29}
+\chapter{Exercise 29: Libraries And Linking}
 
+A central part of any C program is the ability to link it to libraries that
+your operating system provides.  Linking is how you get additional features
+for your program that someone else created and packaged on the system.  You've
+been using some standard libraries that are automatically included by the 
+compiler, but we'll use some other ones and then we'll create our own little
+one.
 
 \section{What You Should See}
 
