--- a/ex30.tex
+++ b/ex30.tex
@@ -1,5 +1,10 @@
-\chapter{Exercise 30}
+\chapter{Exercise 30: Automated Testing}
 
+Automated testing is used frequently in other languages like Python and Ruby, but
+rarely used in C.  Part of the reason comes from the difficulty of automatically
+loading and testing pieces of C code.  In this chapter we'll create a very small
+little testing "framework" and get your skeleton directory building an example
+test case.
 
 \section{What You Should See}
 
