--- a/ex31.tex
+++ b/ex31.tex
@@ -1,4 +1,8 @@
-\chapter{Exercise 31}
+\chapter{Exercise 31: Debugging Code}
+
+This exercise will teach you strategies for debugging a problem in your 
+code.  We'll cover logging, make some macros to help with logging, asserts,
+and finally using a debugger if you need to use one.
 
 
 \section{What You Should See}
