--- a/ex32.tex
+++ b/ex32.tex
@@ -1,5 +1,19 @@
-\chapter{Exercise 32}
+\chapter{Exercise 32: The BBS Project}
 
+The rest of this book will apply our knowledge about C to create a simple
+Bulleting Board Service (BBS).  If you haven't used a BBS before, they were
+systems that let people dial one computer from their own computer and leave
+messages for other folks.  Long before the internet became popular or any
+social network existed, BBSes let people hang out and communicate with people
+all over the world.
+
+Our BBS will be simple, and will be connected to the internet rather than
+through a phone line.  Our BBS will also be written using modern C code and
+with modern libraries like SQLite3.  Hopefully by completing the rest of this
+book you'll learn both good C skills and how to write a network server.
+
+But, don't worry, despite what people try to say writing little servers in C is
+pretty easy.  It's writing big servers in C that sucks.
 
 \section{What You Should See}
 
