--- a/book.tex
+++ b/book.tex
@@ -20,6 +20,8 @@
 \mainmatter
 
 \include{introduction}
+
+\part{Basic Skills}
 \include{ex0}
 \include{ex1}
 \include{ex2}
@@ -47,6 +49,8 @@
 \include{ex24}
 \include{ex25}
 \include{ex26}
+
+\part{Advanced Applications}
 \include{ex27}
 \include{ex28}
 \include{ex29}
