Add missing is. And fix a typo.

--- a/ex4.tex
+++ b/ex4.tex
@@ -79,7 +79,7 @@ directly, we'll run it with \ident{Valgrind} (see Source: "Building and running 
 \end{Terminal}
 
 This one is huge because \ident{Valgrind} is telling you exactly where
-every problem in your program.  Starting at the top here's whare you're
+every problem in your program is.  Starting at the top here's what you're
 reading, line by line (line numbers are on the left so you can follow):
 
 \begin{description}
