Fix a typo, and break a long line into two.

--- a/ex5.tex
+++ b/ex5.tex
@@ -52,9 +52,10 @@ exercises to understand each part better:
     did a \verb|:| and indented. In other languages you might have a
     \ident{begin} or \ident{do} word to start.
 \item[ex5.c:6] A variable declaration and assignment at the same time.
-    This is how you create a variable, with the syntax \verb|type name = value;|.  In C statements (except for logic) end in a \verb|';'| (semicolon) character.
-\item[ex5.c:8] Another kind of comment, and it works like Python or 
-    Ruby comments where it starts at the \verb|//| and goes untilt he end of 
+    This is how you create a variable, with the syntax \verb|type name = value;|.
+    In C statements (except for logic) end in a \verb|';'| (semicolon) character.
+\item[ex5.c:8] Another kind of comment, and it works like Python or
+    Ruby comments where it starts at the \verb|//| and goes until the end of
     the line.
 \item[ex5.c:9] A call to your old friend \ident{printf}.  Like in many languages
     function calls work with the syntax \verb|name(arg1, arg2);| and can have
