--- a/ex7.tex
+++ b/ex7.tex
@@ -22,7 +22,7 @@ Here's what's going on in this little bit of nonsense:
     as a long decimal".
 \item[ex7.c:15-17] Just more math and printing.
 \item[ex7.c:19-21] Craft up a depiction of your bug rate compared to the bugs in
-    the universe, which is a completely inaccurate calculation.  It so small
+    the universe, which is a completely inaccurate calculation.  It's so small
     though that we have to use \verb|%e| to print it in scientific notation.
 \item[ex7.c:24] Make a character, with a special syntax \verb|'\0'| which creates
     a 'nul byte' character.  This is effectively the number 0.
