--- a/ex9.tex
+++ b/ex9.tex
@@ -73,7 +73,7 @@ character at the end of the strings.  There's a few ways to do this:
 \end{enumerate}
 
 Try to come up with some other ways to break this, and as usual run all of
-these under valgrind so you can see exactly what is going on and what the
+these under Valgrind so you can see exactly what is going on and what the
 errors are called.  Sometimes you'll make these mistakes and even
 Valgrind can't find them, but try moving where you declare the variables
 to see if you get the error.  This is part of the voodoo of C, that
