--- a/ex10.tex
+++ b/ex10.tex
@@ -46,7 +46,7 @@ using \ident{argc} and \ident{argv} like this:
     array so you can process them without going past the end.
 \item The \ident{for-loop} sets up with \verb|i = 0| in the initializer.
 \item It then tests that \ident{i} is less than \ident{argc} with the
-    test \verb|i < argc|. Since initially 0 < 1 it will pass.
+    test \verb|i < argc|. Since initially $0 < 1$ it will pass.
 \item It then runs the code which just prints out the \ident{i} and 
     uses \ident{i} to index into \ident{argv}.
 \item The incrementer is then run using the \verb|i++| syntax, which is
