Replace "using" with "used".

--- a/ex13.tex
+++ b/ex13.tex
@@ -8,7 +8,7 @@ more alternatives to \ident{if-statements} and work the same internally.
 
 The \ident{switch-statement} is actually entirely different and is really "jump
 table".  Instead of random boolean expressions, you can only put expressions
-that result in integers, and these integers are using to calculate jumps from
+that result in integers, and these integers are used to calculate jumps from
 the top of the \ident{switch} to the part that matches that value.  Here's some
 code that we'll break down to understand this concept of "jump tables":
 
