Capitalize Valgrind to keep it consistent with the rest of the text in KRC chapter.

--- a/krcritique.tex
+++ b/krcritique.tex
@@ -27,7 +27,7 @@ In this chapter we will use all the knowledge you've gained from
 this book, and spend it reviewing the code in \krc.  What we will do is
 take many pieces of code from the book, find all the bugs in it, and write
 a unit test that \emph{exercises} the bugs.  We'll then run this test under
-valgrind to get statistics and data, and then we'll fix the bugs with a redesign.
+Valgrind to get statistics and data, and then we'll fix the bugs with a redesign.
 
 This will obviously be a long chapter so I'm going to only do a handful of
 these and then I'm going have you do the rest.  I'll provide a guide that is
