minor spelling correction in README

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This will be a book teaching C programming to anyone who has already learned
-one other programming language.  It will teach modern C with heavey emphasis
+one other programming language.  It will teach modern C with heavy emphasis
 on reliable programming.
