Mark programs with \program.

--- a/ex7.tex
+++ b/ex7.tex
@@ -60,7 +60,7 @@ As usual, here's what you should see for the output:
 Again, go through this and try breaking the \ident{printf} by passing in
 the wrong arguments.  See what happens when you try to print out that
 \ident{nul\_byte} variable too with \verb|%s| vs. \verb|%c|.  When you
-break it, run it under \ident{Valgrind} to see what it says about your
+break it, run it under \program{Valgrind} to see what it says about your
 breaking attempts.
 
 \section{Extra Credit}
