--- a/commands.tex
+++ b/commands.tex
@@ -2,6 +2,7 @@
 \newcommand{\versal}[1]{\noindent{\Huge #1\kern-.10em}}
 \newcommand{\file}[1]{{\bf\ttfamily #1}}
 \newcommand{\ident}[1]{{\it\ttfamily #1}}
+\newcommand{\func}[1]{{\it\ttfamily #1}}
 \newcommand{\shell}[1]{{\it\ttfamily #1}}
 \newcommand{\python}[1]{{\it\ttfamily #1}}
 \newcommand{\ruby}[1]{{\it\ttfamily #1}}
